--- a/index.html
+++ b/index.html
@@ -1,31 +1,96 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
+
+<!-- Mirrored from colorlib.com/etc/cf/ContactFrom_v12/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 06 Nov 2020 10:27:12 GMT -->
+<!-- Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+
 <head>
+  <title>مبروك</title>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="Description" content="Enter your description here"/>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
-  <link rel="stylesheet" href="assets/css/style.css">  
-  <title>Thanks</title>
-  <link rel="stylesheet" href="./style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="icon" type="image/png" href="images/icons/favicon.ico" />
+
+  <link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
+
+  <link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+
+  <link rel="stylesheet" type="text/css" href="vendor/animate/animate.css">
+
+  <link rel="stylesheet" type="text/css" href="vendor/css-hamburgers/hamburgers.min.css">
+
+  <link rel="stylesheet" type="text/css" href="vendor/select2/select2.min.css">
+
+  <link rel="stylesheet" type="text/css" href="css/util.css">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
 
 </head>
-<body>
-<!-- partial:index.partial.html -->
-<div class="container">
-<div class="check-circle">
-  <div class="check-circle__mark"></div>
-</div>
-<div class="titleContainer">
-  <p class="title">شكرا لملء المعلومات الخاصة بك!  </p>
-</div>
-<!-- partial -->
-</div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<body>
+  <div class="bg-contact100">
+    <div class="bg-contactBg">
+      <div class="logoContainer">
+        <div class="container">
+          <div class="logo">
+            <img src="./images/logo.png" class="img-fluid" alt="">
+          </div>
+        </div>
+      </div>
+      <div class="container-contact100">
+        <div class="opacityContainer">
+          <div class="row" data-aos="zoom-in" data-aos-anchor-placement="top-center" data-aos-duration="3000">
+           
+          </div>
+          <div class="wrap-contact100">
+            <span class="contact100-form-title">
+              رائع !! مبروك
+
+            </span>
+            <span class="contact100-form-title">
+              أنجزت الخطوة الأهم لامتلاك بيتك الفاخر
+              خطوة واحدة تفصلك عن تحقيق حلمك
+              سنتصل بك في أقرب وقت ليصبح الحلم حقيقة
+              يا لها من لحظة مميزة !
+            </span>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+ 
+
+
+  <script src="vendor/jquery/jquery-3.2.1.min.js"></script>
+
+  <script src="vendor/bootstrap/js/popper.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+
+  <script src="vendor/select2/select2.min.js"></script>
+
+  <script src="vendor/tilt/tilt.jquery.min.js"></script>
+  <script>
+    $('.js-tilt').tilt({
+      scale: 1.1
+    })
+  </script>
+
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-23581568-13');
+  </script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
+
 </html>
