--- a/index.html
+++ b/index.html
@@ -32,36 +32,42 @@
 <body>
   <div class="bg-contact100">
     <div class="bg-contactBg">
-      <div class="logoContainer">
+      <!-- <div class="logoContainer">
         <div class="container">
           <div class="logo">
             <img src="./images/logo.png" class="img-fluid" alt="">
           </div>
         </div>
-      </div>
+      </div> -->
       <div class="container-contact100">
         <div class="opacityContainer">
           <div class="row" data-aos="zoom-in" data-aos-anchor-placement="top-center" data-aos-duration="3000">
-           
+
           </div>
           <div class="wrap-contact100">
-            <span class="contact100-form-title">
+            <p class="contact100-form-title">
               رائع !! مبروك
-
-            </span>
-            <span class="contact100-form-title">
+            </p>
+            <p class="contact100-form-title">
               أنجزت الخطوة الأهم لامتلاك بيتك الفاخر
+            </p>
+            <p class="contact100-form-title">
               خطوة واحدة تفصلك عن تحقيق حلمك
+            </p>
+            <p class="contact100-form-title">
               سنتصل بك في أقرب وقت ليصبح الحلم حقيقة
+            </p>
+
+            <p class="contact100-form-title">
               يا لها من لحظة مميزة !
-            </span>
+            </p>
           </div>
         </div>
       </div>
     </div>
 
   </div>
- 
+
 
 
   <script src="vendor/jquery/jquery-3.2.1.min.js"></script>
