--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 
           </div>
           <div class="wrap-contact100">
-            <p class="contact100-form-title">
-              رائع !! مبروك
+            <p class="contact100-form-title txtLg">
+              رائع .. مبروك
             </p>
             <p class="contact100-form-title">
               أنجزت الخطوة الأهم لامتلاك بيتك الفاخر
